Update workflows, confluence scans, and elicitation services (#32)
* Adding multiple commands

# Conflicts:
#	src/main/resources/application-prod-nginx.properties

* Workflow tasks and commands working at a basic level

* Workflow tasks and commands working at a basic level

* Agent workflow progress notifications are half working.

* Notifications and stream response is working well.

* Cleaning up warnings

* Cleaning up warnings

* Honor the direct tool callback result from MCP tools

* When the tool callback is a direct result, extract the text from the response.

* Fixing some authentication issues

* Updating stream code for elicitations

* Small updates to ElicitationService implementation

* Updates to ElicitationService implementation

* Making a more flexable elicitation process.

* Elicitation updates to persist responses.

* updating spring boot starter version

* fixing this test

* fixing notification emitter

* fixing this test

* Persist workflow notifications.

* Added an ollama model cache.
Documentation updates.

* Updating version to 1.2.0

* Config updates for default ollama model.

* Slowing down confluence and ollama model scanns.