@@ -1,61 +1,108 @@
 package com.solesonic.service.prompt;
 
 import com.solesonic.exception.ChatException;
-import com.solesonic.model.prompt.SlashCommandPrompt;
+import com.solesonic.mcp.client.McpIdentityProvider;
+import com.solesonic.model.prompt.SlashCommand;
+import io.modelcontextprotocol.client.McpAsyncClient;
 import io.modelcontextprotocol.client.McpSyncClient;
 import io.modelcontextprotocol.spec.McpSchema;
+import org.apache.commons.collections4.ListUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.ai.chat.client.ChatClient;
+import org.springframework.ai.chat.client.advisor.PromptChatMemoryAdvisor;
+import org.springframework.ai.chat.client.advisor.SimpleLoggerAdvisor;
+import org.springframework.ai.chat.memory.ChatMemory;
+import org.springframework.ai.ollama.OllamaChatModel;
+import org.springframework.ai.ollama.api.OllamaApi;
+import org.springframework.ai.ollama.api.OllamaChatOptions;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.event.EventListener;
 import org.springframework.data.redis.core.ReactiveStringRedisTemplate;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Mono;
+import reactor.core.scheduler.Schedulers;
 import tools.jackson.core.type.TypeReference;
 import tools.jackson.databind.json.JsonMapper;
 
 import java.time.Duration;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.List;
+import java.util.*;
+
+import static com.solesonic.model.prompt.SlashCommand.*;
 
 @Service
 public class SlashCommandService {
     private static final Logger log = LoggerFactory.getLogger(SlashCommandService.class);
     private static final String CACHE_KEY = "slash:commands:catalog";
-    private static final TypeReference<List<SlashCommandPrompt>> CATALOG_TYPE_REFERENCE = new TypeReference<>() {
+    private static final TypeReference<List<SlashCommand>> CATALOG_TYPE_REFERENCE = new TypeReference<>() {
     };
-    public static final String COMMAND = "command";
 
-    private final List<McpSyncClient> mcpSyncClients;
+    private final SimpleLoggerAdvisor simpleLoggerAdvisor = new SimpleLoggerAdvisor();
+    private final ChatMemory chatMemory;
+    private final OllamaApi ollamaApi;
+
+    private final McpSyncClient mcpSyncClient;
     private final ReactiveStringRedisTemplate redisTemplate;
     private final JsonMapper jsonMapper;
     private final long cacheTtlSeconds;
     private final boolean warmupOnStartup;
 
-    public SlashCommandService(List<McpSyncClient> mcpSyncClients,
+    public SlashCommandService(ChatMemory chatMemory,
+                               OllamaApi ollamaApi,
+                               List<McpSyncClient> mcpSyncClients,
                                ReactiveStringRedisTemplate redisTemplate,
                                JsonMapper jsonMapper,
                                @Value("${solesonic.llm.slash-commands.cache.ttl-seconds:3600}") long cacheTtlSeconds,
                                @Value("${solesonic.llm.slash-commands.cache.warmup-on-startup:true}") boolean warmupOnStartup) {
-        this.mcpSyncClients = mcpSyncClients;
+        this.chatMemory = chatMemory;
+        this.ollamaApi = ollamaApi;
         this.redisTemplate = redisTemplate;
         this.jsonMapper = jsonMapper;
         this.cacheTtlSeconds = cacheTtlSeconds;
         this.warmupOnStartup = warmupOnStartup;
+
+        mcpSyncClient = mcpSyncClients.getFirst();
     }
 
-    public SlashCommandPrompt command(String command) {
-        return slashCommands().stream()
-                .filter(prompt -> prompt.command().equals(command))
-                .findFirst()
-                .orElseThrow(() -> new ChatException("No prompt found for command: " + command));
+    public ChatClient taskClient(String tool) {
+        log.info("Creating task client with tool: {}", tool);
+
+        McpIdentityProvider mcpIdentityProvider = new McpIdentityProvider(mcpSyncClient, tool);
+
+        OllamaChatOptions ollamaChatOptions = OllamaChatOptions.builder()
+                .model("mistral:7b")
+                .build();
+
+        OllamaChatModel ollamaChatModel = OllamaChatModel.builder()
+                .ollamaApi(ollamaApi)
+                .defaultOptions(ollamaChatOptions).build();
+
+        return ChatClient.builder(ollamaChatModel)
+                .defaultToolCallbacks(mcpIdentityProvider)
+                .defaultAdvisors(
+                        PromptChatMemoryAdvisor.builder(chatMemory).build(),
+                        simpleLoggerAdvisor
+                )
+                .build();
     }
 
-    public List<SlashCommandPrompt> typeAhead(String commandPrefix) {
-        log.info("Type ahead for command search: {}", commandPrefix);
+    public List<SlashCommand> commands(Set<String> commands) {
+
+        var matched = slashCommands().stream()
+                .filter(slashCommand -> commands.contains(slashCommand.command()))
+                .toList();
+
+        if (matched.isEmpty()) {
+            throw new ChatException("No commands found for commands: " + commands);
+        }
+
+        return matched;
+    }
+
+    public List<SlashCommand> typeAhead(String commandPrefix) {
+        log.info("Type ahead for commands search: {}", commandPrefix);
 
         return slashCommands().stream()
                 .filter(prompt -> {
@@ -65,7 +112,7 @@ public class SlashCommandService {
                 .toList();
     }
 
-    public List<SlashCommandPrompt> slashCommands() {
+    public List<SlashCommand> slashCommands() {
         String cachedPayload = redisTemplate.opsForValue().get(CACHE_KEY).block();
 
         if (StringUtils.isNotBlank(cachedPayload)) {
@@ -75,19 +122,22 @@ public class SlashCommandService {
         return refreshSlashCommands();
     }
 
-    public List<SlashCommandPrompt> refreshSlashCommands() {
-        List<SlashCommandPrompt> slashCommands = loadSlashCommandsFromMcp();
+    public List<SlashCommand> refreshSlashCommands() {
+        List<SlashCommand> slashCommands = loadSlashCommandsFromMcp();
 
         if (slashCommands.isEmpty()) {
             return slashCommands;
         }
+
+        slashCommands
+                .forEach(slashCommand -> log.info("Loaded command: {}", slashCommand.name()));
 
         String serializedPayload = jsonMapper.writeValueAsString(slashCommands);
 
         redisTemplate.opsForValue()
                 .set(CACHE_KEY, serializedPayload, Duration.ofSeconds(cacheTtlSeconds))
                 .onErrorResume(exception -> {
-                    log.warn("Failed to cache slash-command catalog in Redis: {}", exception.getMessage());
+                    log.warn("Failed to cache slash-commands catalog in Redis: {}", exception.getMessage());
 
                     return Mono.just(Boolean.FALSE);
                 })
@@ -102,32 +152,50 @@ public class SlashCommandService {
             return;
         }
 
-        List<SlashCommandPrompt> slashCommands = slashCommands();
-        log.info("Slash-command prompt catalog ready with {} command(s)", slashCommands.size());
+        redisTemplate.delete(CACHE_KEY)
+                .doOnSuccess(_ -> log.info("Purged slash-commands cache on startup"))
+                .onErrorResume(exception -> {
+                    log.warn("Failed to purge slash-commands cache on startup: {}", exception.getMessage());
+                    return Mono.just(0L);
+                })
+                .block();
+
+        List<SlashCommand> slashCommands = slashCommands();
+        log.info("Slash-commands prompt catalog ready with {} commands(s)", slashCommands.size());
     }
 
-    private List<SlashCommandPrompt> loadSlashCommandsFromMcp() {
-        if (mcpSyncClients == null || mcpSyncClients.isEmpty()) {
-            log.warn("No MCP sync clients configured; slash-command prompt catalog is empty");
-
-            return Collections.emptyList();
-        }
-
-        McpSyncClient mcpSyncClient = mcpSyncClients.getFirst();
+    private List<SlashCommand> loadSlashCommandsFromMcp() {
         McpSchema.ListPromptsResult listPromptsResult = mcpSyncClient.listPrompts();
+        McpSchema.ListToolsResult listToolsResult = mcpSyncClient.listTools();
 
-        if(listPromptsResult == null) {
-            return Collections.emptyList();
+        List<SlashCommand> promptCommands = List.of();
+
+        if (listPromptsResult != null) {
+            List<McpSchema.Prompt> mcpPrompts = listPromptsResult.prompts();
+
+            promptCommands = mcpPrompts.stream()
+                    .filter(listedPrompt -> StringUtils.isNotBlank(listedPrompt.name()))
+                    .filter(listPrompt -> listPrompt.meta() != null)
+                    .filter(listedPrompt -> listedPrompt.meta().get(COMMAND) != null)
+                    .map(SlashCommand::new)
+                    .sorted(Comparator.comparing(SlashCommand::command))
+                    .toList();
         }
 
-        List<McpSchema.Prompt> mcpPrompts = listPromptsResult.prompts();
+        List<SlashCommand> toolCommands = List.of();
 
-        return mcpPrompts.stream()
-                .filter(listedPrompt -> StringUtils.isNotBlank(listedPrompt.name()))
-                .filter(listPrompt -> listPrompt.meta() != null)
-                .filter(listedPrompt -> listedPrompt.meta().get(COMMAND) != null)
-                .map(prompt -> new SlashCommandPrompt(prompt.meta().get(COMMAND).toString(), prompt.name(), prompt.description()))
-                .sorted(Comparator.comparing(SlashCommandPrompt::command))
-                .toList();
+        if (listToolsResult != null) {
+            List<McpSchema.Tool> tools = listToolsResult.tools();
+
+            toolCommands = tools.stream()
+                    .filter(listedTool -> StringUtils.isNotBlank(listedTool.name()))
+                    .filter(listedTool -> listedTool.meta() != null)
+                    .filter(listedTool -> listedTool.meta().get(COMMAND) != null)
+                    .map(SlashCommand::new)
+                    .sorted(Comparator.comparing(SlashCommand::command))
+                    .toList();
+        }
+
+        return ListUtils.union(promptCommands, toolCommands);
     }
 }
